Fixed issue with broken redirection

--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -9,14 +9,15 @@
       .well.contact-info
         = render @company
 
-      .page-header
-        %h3 Recent Jobs
+      - if @company.jobs.present?
+        .page-header
+          %h3 Recent Jobs
 
-      %ul
-        - @company.jobs.each do |job|
-          %li
-            = link_to job.title, job_url(job)
-            %span.muted= job.location
+        %ul
+          - @company.jobs.each do |job|
+            %li
+              = link_to job.title, job_url(job)
+              %span.muted= job.location
 
 
 
