--- a/app/views/layouts/public/_menu.html.haml
+++ b/app/views/layouts/public/_menu.html.haml
@@ -6,7 +6,7 @@
         %span.icon-bar
         %span.icon-bar
 
-      %a.brand(href="#")
+      %a.brand{href: root_path}
         %img{src: '/assets/logo.png', height: '30px'}
         somewhere in... jobs
 
