--- a/app/views/console/dashboard/index.html.haml
+++ b/app/views/console/dashboard/index.html.haml
@@ -3,5 +3,7 @@
   Welcome to Dashboard!
 
 %p
-  %a.btn.btn-large.btn-primary{href: new_console_job_path} Add New Job
-  %a.btn.btn-large.btn-primary{href: new_console_company_path} Add New Company
+  .btn-group
+    %a.btn.btn-large.btn-primary{href: new_console_job_path} Add New Job
+    %a.btn.btn-large.btn-primary{href: new_console_company_path} Add New Company
+    %a.btn.btn-large.btn-primary{href: new_console_page_path} Add New Page
