--- a/app/views/console/pages/_form.html.haml
+++ b/app/views/console/pages/_form.html.haml
@@ -1,19 +1,25 @@
-= form_for [:console, @page] do |f|
-  -if @page.errors.any?
+= form_for [:console, @page], :html => { :class => 'form-horizontal' } do |f|
+  - if @page.errors.any?
     #error_explanation
       %h2= "#{pluralize(@page.errors.count, "error")} prohibited this page from being saved:"
       %ul
         - @page.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :title
-    = f.text_field :title
-  .field
-    = f.label :content
-    = f.text_area :content, class: 'rich-editor input-xxlarge'
-  .field
-    = f.label :display
-    = f.check_box :display
-  .actions
+  .control-group
+    = f.label :title, class: 'control-label'
+    .controls
+      = f.text_field :title, class: 'input-xxlarge'
+
+  .control-group
+    = f.label :content, class: 'control-label'
+    .controls
+      = f.text_area :content, class: 'rich-editor input-xxlarge'
+
+  .control-group
+    = f.label :display, class: 'control-label'
+    .controls
+      = f.check_box :display
+
+  .form-actions
     = f.submit 'Save', :class => 'btn btn-primary btn-large'
