--- a/app/views/console/pages/new.html.haml
+++ b/app/views/console/pages/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New Page
+%section
+  .page-header
+    %h1 New Page
 
-= render 'form'
-
-= link_to 'Back', console_pages_path
+  = render 'form'
