contract type humanized

--- a/app/views/console/jobs/index.html.haml
+++ b/app/views/console/jobs/index.html.haml
@@ -24,7 +24,7 @@
             = link_to job.title, job_url(job), :target => :blank
           %td= job.location
           %td= job.salary
-          %td= job.contract_type
+          %td= job.contract_type.humanize
           %td
             = job.created_at.present? ? distance_of_time_in_words_to_now(job.created_at) + ' ago' : '-'
           %td
