--- a/app/views/console/jobs/index.html.haml
+++ b/app/views/console/jobs/index.html.haml
@@ -28,7 +28,10 @@
           %td
             = job.created_at.present? ? distance_of_time_in_words_to_now(job.created_at) + ' ago' : '-'
           %td
-            = job.expires_at.present? ? distance_of_time_in_words(Time.now, job.expires_at) : '-'
+            - if job.expires_at > Time.now
+              = job.expires_at.present? ? distance_of_time_in_words(Time.now, job.expires_at) : '-'
+            - else
+              = job.expires_at
           %td
             = job.display ? 'Visible' : 'Hidden'
           %td
