--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -9,22 +9,27 @@
     /= pagination_links(@jobs)
     %table.table.table-striped
       %tr
-        %th Company
-        %th Title
-        %th Requirements
-        %th Expires at
+        %th
+          = t(:title)
+        %th
+          = t(:company)
+        %th
+          = t(:requirements)
+        %th
+          = t(:expires_in)
         %th
 
       - @jobs.each do |job|
         %tr
+          %td= link_to job.title, job_url(job)
           %td
             = link_to job.company.name, company_path(job.company)
-          %td= link_to job.title, job_url(job)
+
           %td= job.requirements.html_safe
           %td
 
             - if (Time.now + 2.days) > job.expires_at
-              %span.btn-danger{:title => "#{job.expires_at.strftime('%d/%m/%Y %H:%M')}"}
+              %p.expires_soon{:title => "#{job.expires_at.strftime('%d/%m/%Y %H:%M')}"}
                 = distance_of_time_in_words_to_now(job.expires_at)
             - elsif (Time.now + 7.days) > job.expires_at
               %span{:title => "#{job.expires_at.strftime('%d/%m/%Y %H:%M')}"}
