--- a/app/views/layouts/console/_menu.html.haml
+++ b/app/views/layouts/console/_menu.html.haml
@@ -12,11 +12,11 @@
 
       .nav-collapse
         %ul.nav
-          %li#console-companies= link_to "Companies", :console_companies
-          %li#console-jobs= link_to "Jobs", :console_jobs
-          %li#console-pages= link_to "Pages", :console_pages
+          %li#console-companies= link_to "companies", :console_companies
+          %li#console-jobs= link_to "jobs", :console_jobs
+          %li#console-pages= link_to "pages", :console_pages
 
         %ul.nav.pull-right
           %li
-            = link_to 'Main Site', root_path
+            = link_to 'main site', root_path
 
