--- a/app/views/console/companies/edit.html.haml
+++ b/app/views/console/companies/edit.html.haml
@@ -1,7 +1,8 @@
-%h1 Edit Company
+.page-header
+  %h1 edit company
 
 = render 'form'
 
-= link_to 'Show', console_company_path(@company), :class => 'btn'
+= link_to ' show', console_company_path(@company), :class => 'btn icon-eye-open'
 \::
-= link_to 'Back', console_companies_path, :class => 'btn'
+= link_to ' back', console_companies_path, :class => 'btn icon-arrow-left'
