--- a/app/views/console/companies/index.html.haml
+++ b/app/views/console/companies/index.html.haml
@@ -1,13 +1,13 @@
 %section.form
   .page-header
-    %h1 Companies
+    %h1 companies
   -if @companies.present?
     %table.table.table-striped
       %tr
-        %th Name
-        %th Email
-        %th Website
-        %th Address
+        %th name
+        %th email
+        %th website
+        %th address
         %th
 
       - @companies.each do |company|
@@ -18,13 +18,13 @@
           %td{style: 'width: 30%'}= company.address
           %td
             .btn-group
-              = link_to '<i class="icon-share-alt">&nbsp;</i>Show'.html_safe, company_path(company), :class => 'btn btn-mini', target: '_blank'
-              = link_to '<i class="icon-pencil">&nbsp;</i>Edit'.html_safe, edit_console_company_path(company), :class => 'btn btn-mini'
-              = link_to '<i class="icon-remove">&nbsp;</i>Destroy'.html_safe, console_company_path(company), :confirm => 'Are you sure?',
+              = link_to '<i class="icon-share-alt">&nbsp;</i>show'.html_safe, company_path(company), :class => 'btn btn-mini', target: '_blank'
+              = link_to '<i class="icon-pencil">&nbsp;</i>edit'.html_safe, edit_console_company_path(company), :class => 'btn btn-mini'
+              = link_to '<i class="icon-remove">&nbsp;</i>destroy'.html_safe, console_company_path(company), :confirm => 'are you sure to delete this company?',
                         :method => :delete, :class => 'btn btn-danger btn-mini'
   - else
     .alert.alert-warning
-      No companies added so far!
+      no companies added so far!
 
   .form-actions
-    = link_to '<i class="icon-plus"></i>&nbsp;Add Company'.html_safe, new_console_company_path, :class => 'btn btn-primary'
+    = link_to '<i class="icon-plus"></i>&nbsp;add company'.html_safe, new_console_company_path, :class => 'btn btn-primary'
