--- a/app/views/console/pages/edit.html.haml
+++ b/app/views/console/pages/edit.html.haml
@@ -1,7 +1,8 @@
-%h1 Editing Page
+.page-header
+  %h1 editing page
 
 = render 'form'
 
-= link_to 'Show', console_page_path(@page)
+= link_to ' show', console_page_path(@page), :class => 'btn icon-eye-open'
 \|
-= link_to 'Back', console_pages_path
+= link_to ' back', console_pages_path, :class => 'btn icon-arrow-left'
