--- a/app/views/console/pages/index.html.haml
+++ b/app/views/console/pages/index.html.haml
@@ -1,27 +1,27 @@
 %section
   .page-header
-    %h1 Static Pages
+    %h1 static pages
 
   -if @pages.present?
     %table.table.table-striped
       %tr
-        %th Title
-        %th Content
-        %th Visibility
+        %th title
+        %th content
+        %th visibility
         %th
 
       - @pages.each do |page|
         %tr
-          %td= page.title
-          %td= page.content.html_safe
-          %td= page.display ? 'Display' : 'Hidden'
           %td
-            = link_to 'Show', console_page_path(page), :class => 'btn'
-            = link_to 'Edit', edit_console_page_path(page), :class => 'btn'
-            = link_to 'X', console_page_path(page), :confirm => 'Are you sure?', :method => :delete, :class => 'btn btn-danger'
+            = link_to page.title, console_page_path(page)
+          %td= page.content.html_safe
+          %td= page.display ? 'visible' : 'hidden'
+          %td
+            = link_to ' edit', edit_console_page_path(page), :class => 'btn icon-edit btn-mini'
+            = link_to ' delete', console_page_path(page), :confirm => 'are you sure to delete this page?', :method => :delete, :class => 'btn btn-danger icon-minus-sign btn-mini'
 
     %br
   - else
     .alert.alert-warning
-      No pages added so far!
-  = link_to 'New Page', new_console_page_path, :class => 'btn btn-primary'
+      no pages added so far!
+  = link_to ' new page', new_console_page_path, :class => 'btn btn-primary icon-plus-sign'
