--- a/app/assets/stylesheets/public/jobs.css.scss
+++ b/app/assets/stylesheets/public/jobs.css.scss
@@ -1,16 +1,33 @@
-.job-detail{
-  .job-title{
+.job-detail {
+  .job-title {
     background-color: green;
     padding: 8px;
   }
 
-  h3{
+  h3 {
     font-size: 14pt;
     background-color: #90ee90;
     padding: 5px;
   }
 }
 
-.expires_soon{
+.expires_soon {
   color: red;
+}
+
+.apply-linkedin{
+  text-align: center;
+}
+
+.well {
+  .page-header {
+    margin-top: 0px;
+    margin-bottom: 5px;
+    padding-bottom: 5px;
+
+    h3{
+      color: #888;
+    }
+  }
+
 }
