--- a/app/views/console/companies/_form.html.haml
+++ b/app/views/console/companies/_form.html.haml
@@ -2,7 +2,7 @@
   - if @company.errors.any?
     .offset1
       #error_explanation.well
-        %h2= "#{pluralize(@company.errors.count, "error")} prohibited this console_company from being saved:"
+        %h2= "#{pluralize(@company.errors.count, "error")} prohibited this company from being saved:"
         %ul
           - @company.errors.full_messages.each do |msg|
             %li= msg
@@ -34,6 +34,12 @@
 
     .controls
       = f.text_area :overview, class: 'rich-editor input-xxlarge'
+
+  .control-group
+    = f.label :linkedin_key, 'company id in linkedin (if any)', class: 'control-label'
+
+    .controls
+      = f.text_field :linkedin_key, class: 'input-xxlarge'
 
   .form-actions
     %a.btn.btn-large{type: 'button', href: console_companies_path}
