--- a/app/views/console/jobs/_details_form.html.haml
+++ b/app/views/console/jobs/_details_form.html.haml
@@ -20,3 +20,5 @@
 .form-actions.navbar-fixed-bottom
   %a.btn.btn-warning{href: '#tab-basic-info', 'data-toggle' => 'tab', type: 'button'} &lt; Previous Basic Info
   %a.btn.btn-primary{href: '#tab-instruction', 'data-toggle' => 'tab', type: 'button'} Next Instruction &gt;
+  - if !@job.new_record?
+    = f.submit 'Save Job', class: 'btn btn-primary btn-large'
