--- a/app/views/layouts/console/_menu.html.haml
+++ b/app/views/layouts/console/_menu.html.haml
@@ -19,4 +19,6 @@
         %ul.nav.pull-right
           %li
             = link_to 'main site', root_path
+          %li
+            = link_to 'clear all cache', console_clearcache_path
 
