lowercased in some other views google analytics added

--- a/app/views/console/dashboard/index.html.haml
+++ b/app/views/console/dashboard/index.html.haml
@@ -1,9 +1,9 @@
-%h1 Dashboard
+%h1 dashboard
 %p
-  Welcome to Dashboard!
+  welcome to dashboard!
 
 %p
   .btn-group
-    %a.btn.btn-large.btn-primary{href: new_console_job_path} Add New Job
-    %a.btn.btn-large.btn-primary{href: new_console_company_path} Add New Company
-    %a.btn.btn-large.btn-primary{href: new_console_page_path} Add New Page
+    %a.btn.btn-large.btn-primary{href: new_console_job_path} add new job
+    %a.btn.btn-large.btn-primary{href: new_console_company_path} add new company
+    %a.btn.btn-large.btn-primary{href: new_console_page_path} add new page
