--- a/app/views/console/jobs/_form.html.haml
+++ b/app/views/console/jobs/_form.html.haml
@@ -10,13 +10,13 @@
     %ul.nav.nav-tabs
       %li.active
         %a.active{'data-toggle' => "tab", href: '#tab-basic-info'}
-          Basic Info
+          basic Info
       %li
-        %a{href: '#tab-details', 'data-toggle' => "tab"} Details
+        %a{href: '#tab-details', 'data-toggle' => "tab"} details
       %li
-        %a{href: '#tab-instruction', 'data-toggle' => "tab"} Instruction
+        %a{href: '#tab-instruction', 'data-toggle' => "tab"} instructions
       %li
-        %a{href: '#tab-expiry', 'data-toggle' => "tab"} Expiry
+        %a{href: '#tab-expiry', 'data-toggle' => "tab"} expiry
 
     .tab-content
       #tab-basic-info.active.tab-pane
