--- a/app/views/console/jobs/index.html.haml
+++ b/app/views/console/jobs/index.html.haml
@@ -11,7 +11,7 @@
         %th salary
         %th type
         %th posted
-        %th expires in
+        %th{width: '100px'} expires in
         %th visibility
         %th actions
 
