--- a/app/views/console/pages/_form.html.haml
+++ b/app/views/console/pages/_form.html.haml
@@ -7,7 +7,7 @@
           %li= msg
 
   .control-group
-    = f.label :title, 'page.title', class: 'control-label'
+    = f.label :title, 'page title', class: 'control-label'
     .controls
       = f.text_field :title, class: 'input-xxlarge'
 
