employer dashboard implemented devise login implemented employer company edit implemented employer job management implemented employer layout, assets group etc. added minor other tweaks in existing sections (console, application etc)

--- a/app/views/employer/companies/manage.html.haml
+++ b/app/views/employer/companies/manage.html.haml
@@ -1,4 +1,4 @@
-= form_for [:console, @company], :html => {class: 'form-horizontal'} do |f|
+= form_for [@company], :url => :employer_update_company, :html => {class: 'form-horizontal'}, :method => (@company.new_record? ? :post : :put) do |f|
 
   = render 'console/companies/common_fields', :f => f
 
