--- a/app/views/console/jobs/_basic_form.html.haml
+++ b/app/views/console/jobs/_basic_form.html.haml
@@ -1,7 +1,8 @@
-.control-group
-  = f.label :company_id, t(:company), :class => 'control-label'
-  .controls
-    = f.select :company_id, Company.all.map{|company| [company.name, company.id]}, {}, {class: 'input-xxlarge'}
+- if super_admin?
+  .control-group
+    = f.label :company_id, t(:company), :class => 'control-label'
+    .controls
+      = f.select :company_id, Company.all.map{|company| [company.name, company.id]}, {}, {class: 'input-xxlarge'}
 
 .control-group
   = f.label :contract_type, t(:contract_type), class: 'control-label'
