--- a/app/views/layouts/_notice.html.haml
+++ b/app/views/layouts/_notice.html.haml
@@ -1,5 +1,13 @@
-- if (notice || alert).present?
-  - if notice.present?
-    .alert.alert-success= notice
-  - elsif alert.present?
-    .alert.alert-error= alert
+
+- if flash.present?
+  .row-fluid
+    - if flash.notice.present?
+      .alert.alert-success
+        %button.close{:'data-dismiss' => 'alert'}
+          x
+        = flash.notice.to_s
+    - if flash.alert.present?
+      .alert.alert-error
+        %button.close{:'data-dismiss' => 'alert'}
+          x
+        = flash.alert.to_s
