--- a/app/views/layouts/employer.html.haml
+++ b/app/views/layouts/employer.html.haml
@@ -3,39 +3,31 @@
   %head
     %meta(charset="utf-8")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    %title= content_for?(:title) ? yield(:title) + ' :: somewhere in... jobs' :  "somewhere in... jobs"
+    %title= content_for?(:title) ? yield(:title) + ' - employer console - somewhere in... jobs'  : "somewhere in... jobs"
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
-      = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
-    = stylesheet_link_tag "application", :media => "all"
+    = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
+    = stylesheet_link_tag "employer/employer", :media => "all"
     %link(href="images/favicon.ico" rel="shortcut icon")
     %link(href="images/apple-touch-icon.png" rel="apple-touch-icon")
     %link(href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72")
     %link(href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114")
-    = render 'common/analytics'
-    = yield :og_tags
+
   %body
     .container
-      = render 'layouts/public/header'
+      = render 'layouts/employer/header'
       = render 'layouts/notice'
       = yield
 
     %footer
       %hr
-      %p{:style => "text-align: center"}
-        - if user_signed_in?
-          = link_to 'sign out', :destroy_user_session
-        - else
-          = link_to 'sign up', :new_user_registration
-          \::
-          = link_to 'sign in', :new_user_session
       %p.muted{align: 'center'}
         %b &copy;
-        = image_tag image_path('logo.gif'),
+        = image_tag 'http://www.somewherein.net/wp-content/themes/Gaia/data/1322638412_swilogo-184x29.gif',
                     title: 'somewhere in net ltd'
 
         = Time.now.year
 
-    = javascript_include_tag "application"
+    = javascript_include_tag "employer/employer"
     = yield :bottom
