without linkedin company id, apply with linkedin is disabled.
employer panel:
company info update optimized. removed unnecessary code block

global 404 and routing error handled with a custom error page

--- a/app/views/console/companies/_common_fields.html.haml
+++ b/app/views/console/companies/_common_fields.html.haml
@@ -39,4 +39,6 @@
 
   .controls
     = f.text_field :linkedin_key, class: 'input-xxlarge'
+    %p.help-block
+      without this, you can't accept job applications via LinkedIn
 
