--- a/app/views/employer/companies/manage.html.haml
+++ b/app/views/employer/companies/manage.html.haml
@@ -1,4 +1,4 @@
-= form_for [@company], :url => :employer_update_company, :html => {class: 'form-horizontal'}, :method => (@company.new_record? ? :post : :put) do |f|
+= form_for [@company], :url => :employer_update_company, :html => {class: 'form-horizontal'}, :method =>  :put do |f|
 
   = render 'console/companies/common_fields', :f => f
 
