--- a/app/views/layouts/_notice.html.haml
+++ b/app/views/layouts/_notice.html.haml
@@ -5,9 +5,9 @@
       .alert.alert-success
         %button.close{:'data-dismiss' => 'alert'}
           x
-        = flash.notice.to_s
+        = flash.notice.to_s.downcase
     - if flash.alert.present?
       .alert.alert-error
         %button.close{:'data-dismiss' => 'alert'}
           x
-        = flash.alert.to_s
+        = flash.alert.to_s.downcase
