css modified for widget job list with post removed div and ancher

--- a/app/assets/stylesheets/widget.css.scss
+++ b/app/assets/stylesheets/widget.css.scss
@@ -1,32 +1,63 @@
+.floatbox.alt1 {
+  background-color: #fff;
+  background-image: none;
+  text-align: left;
+  border-radius: 16px 16px 16px 0px;
+  box-shadow: 3px 3px 2px #999;
+  border-top: 1px solid #E4E4E4;
+  width: 220px; }
+
 .alt1 {
   #floathead, .floathead {
-    background-image: url(/assets/rightbarg-top.gif);
+    background-image: none;
     background-repeat: no-repeat;
-  }
-}
+    background-color: #84C111;
+    border-radius: 16px 16px 0px 0px;
+    padding-left: 20px; }
+  .floatfoot {
+    text-align: right;
+    padding: 0px 20px 15px;
+    background-position: left bottom;
+    font-size: 14px;
+    color: #999;
+    background-image: none;
+    border-radius: 0px 0px 16px 0px;
+    a {
+      color: #79A529; } } }
 
-
-
-.floatmid {
-    .job {
-        margin-bottom: 5px;
-        padding: 5px;
-
-        &:hover {
-            background: #F7FEDA;
-            box-shadow: 0 0 10px #ccc;
-
-        }
-
-        a {
-            font-weight: bold;
-            color: #0066cc;
-        }
-        .comp-name {
-            font-weight: bold;
-        }
-        .job-loc, .comp-name {
-            color: #888;
-        }
-    }
-}
+.floatmid a {
+  &.jb-item {
+    display: block;
+    margin-bottom: 10px;
+    border-left: 0px solid #FFF;
+    overflow: hidden;
+    margin-left: -10px;
+    padding: 5px;
+    color: #000;
+    border-top: 1px solid #FFF;
+    border-right: 0px solid #FFF;
+    border-bottom: 1px solid #FFF;
+    font: 14px Arial, Helvetica, sans-serif; }
+  .jb-comp {
+    font: bold 13px Arial, Helvetica, sans-serif;
+    color: #999999;
+    display: block;
+    clear: both;
+    text-align: left;
+    margin-top: 5px; }
+  .jb-deadline {
+    display: block;
+    padding: 3px;
+    float: right;
+    background-color: #EFEFEF;
+    border-radius: 6px;
+    font-size: 14px;
+    text-align: center;
+    min-width: 40px; }
+  &.jb-item:hover {
+    text-decoration: none;
+    background-color: #F7FEDA;
+    border-color: #DBEB9C; }
+  &:hover .jb-deadline {
+    color: #FFF;
+    background-color: #94C632; } }
